@@ -1,0 +1,43 @@
+Function: forfactored
+Section: programming/control
+C-Name: forfactored
+Prototype: vV=GGI
+Help: forfactored(N=a,b,seq): the sequence is evaluated, N is of the form
+ [n, factor(n)], n going from a up to b.
+Doc: evaluates \var{seq}, where
+ the formal variable $N$ is $[n, \kbd{factor}(n)]$ and $n$ goes from
+ $a$ to $b$. Nothing is done if $a>b$.
+ $a$ and $b$ must be positive integers. If $b$ is set to \kbd{+oo}, the
+ loop will not stop; it is expected that the caller will break out of the
+ loop itself at some point, using \kbd{break} or \kbd{return}.
+
+ This function is only implemented for $b < 2^{64}$ ($2^{32} on a 32-bit
+ machine). It uses a sieve and runs in time $O(\sqrt{b} + b-a)$. It should
+ be 3 times faster than regular factorization as long as the interval
+ length $b-a$ is much larger than $\sqrt{b}$, getting relatively faster as
+ the bounds increase. The function slows down dramatically
+ if $\kbd{primelimit} < \sqrt{b}$.
+
+ \bprog
+ ? B = 10^9;
+ ? for (N = B, B+10^6, factor(N))
+ time = 4,538 ms.
+ ? forfactored (N = B, B+10^6, [n,fan] = N)
+ time = 1,031 ms.
+
+ ? B = 10^11;
+ ? for (N = B, B+10^6, factor(N))
+ time = 15,575 ms.
+ ? forfactored (N = B, B+10^6, [n,fan] = N)
+ time = 2,375 ms.
+
+ ? B = 10^14;
+ ? for (N = B, B+10^6, factor(N))
+ time = 1min, 4,948 ms.
+ ? forfactored (N = B, B+10^6, [n,fan] = N)
+ time = 58,601 ms.
+ @eprog\noindent The last timing is with the default \kbd{primelimit}
+ (500000) which is much less than $\sqrt{B+10^6}$; it goes down
+ to \kbd{26,750ms} if \kbd{primelimit} gets bigger than that bound.
+ In any case $\sqrt{B+10^6}$ is much larger than the interval length $10^6$
+ so \kbd{forfactored} gets relatively slower for that reason as well.
