@@ -78,4 +78,15 @@
 [2, 8]
 [3, 5]
 [4, 5]
-Total time spent: 8
+[100000, [2, 5; 5, 5]]
+[100001, [11, 1; 9091, 1]]
+[100002, [2, 1; 3, 1; 7, 1; 2381, 1]]
+[100003, Mat([100003, 1])]
+[100004, [2, 2; 23, 1; 1087, 1]]
+[100005, [3, 1; 5, 1; 59, 1; 113, 1]]
+[100006, [2, 1; 31, 1; 1613, 1]]
+[100007, [97, 1; 1031, 1]]
+[100008, [2, 3; 3, 3; 463, 1]]
+[100009, [7, 2; 13, 1; 157, 1]]
+[100010, [2, 1; 5, 1; 73, 1; 137, 1]]
+Total time spent: 1817
