@@ -33,3 +33,6 @@ for(i=1,4,for(j=5,8,
       [i,j]==[3,6], next(2),
       [i,j]==[4,6], next(3)); print([i,j])))
 }
+
+forfactored(N=10^5,10^5+10,print(N))
+c=0;forfactored(N=1,10^6, my([n,f]=N); if (factorback(f)!=n || c++!=n,error(N)))
